# rag-medication-ner

./: .dockerignore  .env.local  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.cpu.yml  docker-compose.local.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: code_quality.yml  test.yml
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: medication.py
app/config/: logging.py  settings.py
app/core/document_store/: factory.py  initializer.py
app/core/evaluation/: evaluator.py
app/core/initialization/: data_loader.py
app/core/pipeline/: factory.py
app/core/services/: medication.py  pipeline.py
app/data/: eval_dataset.json  few_shot_examples.json
app/prompts/: template.py
app/schemas/: medication.py
app/scripts/: evaluate.py
app/utils/: common.py  retry.py
docker/app/: Dockerfile
docker/ollama/: entrypoint.sh
tests/: test_dependencies.py  test_document_store.py  test_endpoints.py  test_initializer.py  test_medication_service.py  test_pipeline_factory.py  test_pipeline_service.py  test_utils.py
